// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test K8sBlueGreenDeployStep should render edit view -with ManifestPaths selected 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall"
    >
      <div
        class="formGroup md"
      >
        <div
          class="InputWithIdentifier--txtNameContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  >
                    Test_A
                  </span>
                </div>
              </span>
            </span>
          </div>
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="name"
            >
              Name
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  type="text"
                  value="Test A"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="spec.deleteResources.type"
          >
            Delete resources by
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  name="spec.deleteResources.type"
                  type="radio"
                  value="ReleaseName"
                />
                <span
                  class="bp3-control-indicator"
                />
                Release Name
              </label>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  name="spec.deleteResources.type"
                  type="radio"
                  value="ResourceName"
                />
                <span
                  class="bp3-control-indicator"
                />
                Resource Name
              </label>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  checked=""
                  name="spec.deleteResources.type"
                  type="radio"
                  value="ManifestPath"
                />
                <span
                  class="bp3-control-indicator"
                />
                Manifest Path
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
            style="align-items: end;"
          >
            <div
              class="bp3-form-group"
              style="width: 430px;"
            >
              
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                >
                  <div
                    class="bp3-input-group MultiTypeInput--input"
                  >
                    <input
                      class="bp3-input"
                      name="spec.deleteResources.spec.manifestPaths[0].value"
                      placeholder="Specify file paths"
                      type="text"
                      value="testA"
                    />
                  </div>
                  <span
                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <button
              class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-minus StyledProps--main"
                icon="minus"
              >
                <svg
                  data-icon="minus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    minus
                  </desc>
                  <path
                    d="M13 7H3c-.55 0-1 .45-1 1s.45 1 1 1h10c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
            style="align-items: end;"
          >
            <div
              class="bp3-form-group"
              style="width: 430px;"
            >
              
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                >
                  <div
                    class="bp3-input-group MultiTypeInput--input"
                  >
                    <input
                      class="bp3-input"
                      name="spec.deleteResources.spec.manifestPaths[1].value"
                      placeholder="Specify file paths"
                      type="text"
                      value="testB"
                    />
                  </div>
                  <span
                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <button
              class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-minus StyledProps--main"
                icon="minus"
              >
                <svg
                  data-icon="minus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    minus
                  </desc>
                  <path
                    d="M13 7H3c-.55 0-1 .45-1 1s.45 1 1 1h10c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
          <span>
            <button
              class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color StyledProps--main addBtn StyledProps--intent-primary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                + Add File
              </span>
            </button>
          </span>
        </div>
      </div>
      <div
        class="formGroup sm"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          style="align-items: center;"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="timeout"
            >
              Timeout
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="flex-grow: 1;"
              >
                <div
                  class="bp3-input-group bp3-fill"
                >
                  <input
                    class="bp3-input"
                    name="timeout"
                    placeholder="Enter w/d/h/m/s/ms"
                    type="text"
                    value="12m"
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test K8sBlueGreenDeployStep should render edit view -with ReleaseName selected 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall"
    >
      <div
        class="formGroup md"
      >
        <div
          class="InputWithIdentifier--txtNameContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  >
                    Test_A
                  </span>
                </div>
              </span>
            </span>
          </div>
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="name"
            >
              Name
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  type="text"
                  value="Test A"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="spec.deleteResources.type"
          >
            Delete resources by
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  checked=""
                  name="spec.deleteResources.type"
                  type="radio"
                  value="ReleaseName"
                />
                <span
                  class="bp3-control-indicator"
                />
                Release Name
              </label>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  name="spec.deleteResources.type"
                  type="radio"
                  value="ResourceName"
                />
                <span
                  class="bp3-control-indicator"
                />
                Resource Name
              </label>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  name="spec.deleteResources.type"
                  type="radio"
                  value="ManifestPath"
                />
                <span
                  class="bp3-control-indicator"
                />
                Manifest Path
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup md"
      >
        <div
          class="bp3-form-group"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            >
              <label
                class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox input StyledProps--main"
              >
                <input
                  checked=""
                  name="spec.deleteResources.spec.deleteNamespace"
                  type="checkbox"
                />
                <span
                  class="bp3-control-indicator"
                />
                Delete namespace
              </label>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup sm"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          style="align-items: center;"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="timeout"
            >
              Timeout
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="flex-grow: 1;"
              >
                <div
                  class="bp3-input-group bp3-fill"
                >
                  <input
                    class="bp3-input"
                    name="timeout"
                    placeholder="Enter w/d/h/m/s/ms"
                    type="text"
                    value="12m"
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--intent-warning StyledProps--padding-medium StyledProps--font-align-center StyledProps--background-red200 StyledProps--flex StyledProps--border StyledProps--border-color-red500"
      id="warning-deletenamespace"
    >
      <p
        class="StyledProps--font StyledProps--main"
      >
        Warning: Ensure that you are not deleting a namespace that is used by other deployments
      </p>
    </div>
  </div>
</div>
`;

exports[`Test K8sBlueGreenDeployStep should render edit view -with ResourceName selected 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall"
    >
      <div
        class="formGroup md"
      >
        <div
          class="InputWithIdentifier--txtNameContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  >
                    Test_A
                  </span>
                </div>
              </span>
            </span>
          </div>
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="name"
            >
              Name
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  type="text"
                  value="Test A"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="spec.deleteResources.type"
          >
            Delete resources by
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  name="spec.deleteResources.type"
                  type="radio"
                  value="ReleaseName"
                />
                <span
                  class="bp3-control-indicator"
                />
                Release Name
              </label>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  checked=""
                  name="spec.deleteResources.type"
                  type="radio"
                  value="ResourceName"
                />
                <span
                  class="bp3-control-indicator"
                />
                Resource Name
              </label>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  name="spec.deleteResources.type"
                  type="radio"
                  value="ManifestPath"
                />
                <span
                  class="bp3-control-indicator"
                />
                Manifest Path
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
            style="align-items: end;"
          >
            <div
              class="bp3-form-group"
              style="width: 430px;"
            >
              
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                >
                  <div
                    class="bp3-input-group MultiTypeInput--input"
                  >
                    <input
                      class="bp3-input"
                      name="spec.deleteResources.spec.resourceNames[0].value"
                      placeholder="Specify resources to be delete"
                      type="text"
                      value="testABC"
                    />
                  </div>
                  <span
                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <button
              class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-minus StyledProps--main"
                icon="minus"
              >
                <svg
                  data-icon="minus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    minus
                  </desc>
                  <path
                    d="M13 7H3c-.55 0-1 .45-1 1s.45 1 1 1h10c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
            style="align-items: end;"
          >
            <div
              class="bp3-form-group"
              style="width: 430px;"
            >
              
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                >
                  <div
                    class="bp3-input-group MultiTypeInput--input"
                  >
                    <input
                      class="bp3-input"
                      name="spec.deleteResources.spec.resourceNames[1].value"
                      placeholder="Specify resources to be delete"
                      type="text"
                      value="test123"
                    />
                  </div>
                  <span
                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <button
              class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-minus StyledProps--main"
                icon="minus"
              >
                <svg
                  data-icon="minus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    minus
                  </desc>
                  <path
                    d="M13 7H3c-.55 0-1 .45-1 1s.45 1 1 1h10c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
          <span>
            <button
              class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color StyledProps--main addBtn StyledProps--intent-primary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                + Add
              </span>
            </button>
          </span>
        </div>
      </div>
      <div
        class="formGroup sm"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          style="align-items: center;"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="timeout"
            >
              Timeout
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="flex-grow: 1;"
              >
                <div
                  class="bp3-input-group bp3-fill"
                >
                  <input
                    class="bp3-input"
                    name="timeout"
                    placeholder="Enter w/d/h/m/s/ms"
                    type="text"
                    value="12m"
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test K8sBlueGreenDeployStep should render edit view as new step 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall"
    >
      <div
        class="formGroup md"
      >
        <div
          class="InputWithIdentifier--txtNameContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                  tabindex="0"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  />
                </div>
              </span>
            </span>
            <span
              class="bp3-icon bp3-icon-edit StyledProps--main"
              icon="edit"
              style="vertical-align: middle;"
            >
              <svg
                data-icon="edit"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  edit
                </desc>
                <path
                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="name"
            >
              Name
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="spec.deleteResources.type"
          >
            Delete resources by
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  checked=""
                  name="spec.deleteResources.type"
                  type="radio"
                  value="ReleaseName"
                />
                <span
                  class="bp3-control-indicator"
                />
                Release Name
              </label>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  name="spec.deleteResources.type"
                  type="radio"
                  value="ResourceName"
                />
                <span
                  class="bp3-control-indicator"
                />
                Resource Name
              </label>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  name="spec.deleteResources.type"
                  type="radio"
                  value="ManifestPath"
                />
                <span
                  class="bp3-control-indicator"
                />
                Manifest Path
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup md"
      >
        <div
          class="bp3-form-group"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            >
              <label
                class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox input StyledProps--main"
              >
                <input
                  name="spec.deleteResources.spec.deleteNamespace"
                  type="checkbox"
                />
                <span
                  class="bp3-control-indicator"
                />
                Delete namespace
              </label>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup sm"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          style="align-items: center;"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="timeout"
            >
              Timeout
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="flex-grow: 1;"
              >
                <div
                  class="bp3-input-group bp3-fill"
                >
                  <input
                    class="bp3-input"
                    name="timeout"
                    placeholder="Enter w/d/h/m/s/ms"
                    type="text"
                    value="10m"
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test K8sBlueGreenDeployStep should render variable view 1`] = `
<div>
  <div
    class="variablesListTable"
  />
</div>
`;
